[package]
name = "leg-studio"
version = "0.1.0"
edition = "2021"

[lib]
name = "leg_studio"
path = "src/lib.rs"

[[bin]]
name = "leg-studio"
path = "src/main.rs"

[dependencies]
eframe = "0.24.1"
egui_plot = "0.24.1"
env_logger = "0.10.0"
egui = "0.24.1"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.0"
rust-embed = "8.0.0"